tests/ui/cached_expires_non_expires_type.stderr
error[E0277]: the trait bound `u32: Expires` is not satisfied
 --> tests/ui/cached_expires_non_expires_type.rs:3:1
  |
3 | #[cached(expires = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Expires` is not implemented for `u32`
  |
note: required by a bound in `ExpiringCache`
 --> src/stores/expiring.rs
  |
  | pub struct ExpiringCache<K: Hash + Eq, V: Expires, S = DefaultHashBuilder> {
  |                                           ^^^^^^^ required by this bound in `ExpiringCache`
  = note: this error originates in the attribute macro `cached` (in Nightly builds, run with -Z macro-backtrace for more info)
