tests/ui/cached_expires_non_expires_type.rs
use cached::macros::cached;

#[cached(expires = true)]
fn my_fn(x: u32) -> u32 {
    x
}

fn main() {}
